DSS-2706 : Zip Generation (#1014)
* entity class change

* zip unzip and sequence number generation

* spotltess

* base image

Co-authored-by: Jerin George <jerin.g@thinkpalm.com>