@@ -1,23 +1,27 @@
 /* Licensed at AlphaOri Technologies */
 package com.cpdss.envoywriter.common;
 
+import java.io.IOException;
+import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
+import java.security.DigestOutputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.security.spec.KeySpec;
 import java.util.Base64;
+import java.util.zip.ZipOutputStream;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 import lombok.extern.log4j.Log4j2;
 
 /** @Author jerin.g */
 @Log4j2
 public class Utility {
-
-  private static final String SECRET_KEY = "my_super_secret_key_ho_ho_ho";
-  private static final String SALT = "ssshhhhhhhhhhh!!!!";
 
   public static String encrypt(String strToEncrypt, String secret, String salt) {
     try {
@@ -39,22 +43,20 @@ public class Utility {
     }
   }
 
-  public static String decrypt(String strToDecrypt, String secret, String salt) {
+  public static String getCheckSum(ZipOutputStream zipInputStream) {
+
+    MessageDigest md;
     try {
-      byte[] iv = new byte[16];
-      IvParameterSpec ivspec = new IvParameterSpec(iv);
+      md = MessageDigest.getInstance("MD5");
+      try (OutputStream os = zipInputStream;
+          DigestOutputStream dis = new DigestOutputStream(os, md)) {}
 
-      SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-      KeySpec spec = new PBEKeySpec(secret.toCharArray(), salt.getBytes(), 65536, 256);
-      SecretKey tmp = factory.generateSecret(spec);
-      SecretKeySpec secretKey = new SecretKeySpec(tmp.getEncoded(), "AES");
-
-      Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
-      cipher.init(Cipher.DECRYPT_MODE, secretKey, ivspec);
-      return new String(cipher.doFinal(Base64.getDecoder().decode(strToDecrypt)));
-    } catch (Exception e) {
-      log.error("Error while decrypting: " + e);
-      return null;
+      return DatatypeConverter.printHexBinary(md.digest()).toUpperCase();
+    } catch (NoSuchAlgorithmException e) {
+      log.error("Error while hashing: " + e);
+    } catch (IOException e) {
+      log.error("Error while hashing: " + e);
     }
+    return null;
   }
 }
